kubernetes/jenkins/deployment-agent-venus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-agent-venus
  namespace: jenkins
  labels:
    app: jenkins-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-agent
  template:
    metadata:
      labels:
        app: jenkins-agent
    spec:
      containers:
        - name: jenkins-agent-venus
          image: vlutz/inbound-agent:jdk17-preview # jenkins/inbound-agent:jdk11
