kubernetes/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-middleware@kubernetescrd
spec:
  tls:
    - secretName: jenkins.monke.science-tls
      hosts:
        - jenkins.monke.science
    - secretName: monke.science-tls
      hosts:
        - monke.science
  rules:
    - host: jenkins.monke.science
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 80
